Habilitar eliminación de una tabla con todos sus campos en un solo comando

--- a/htmltmpl/ddd/paquetes.html
+++ b/htmltmpl/ddd/paquetes.html
@@ -17,7 +17,7 @@
 			<div tipo="entidad" class="flex justify-between gap-2 p-2 bg-cyan-950 rounded-md">
 				<span class="p-1 font-mono text-xs text-white bg-teal-700 rounded">tbl</span>
 				<a href="/tablas/{{ .TablaID }}">{{ .NombreItem }}</a>
-				<button type="button" hx-delete="/tablas/{{ .TablaID }}" hx-confirm="¿Eliminar tabla?">🚮</button>
+				<button type="button" hx-delete="/tablas/{{ .TablaID }}" hx-prompt="¿Eliminar tabla {{ .NombreRepo }}? Se borrarán todos los campos. Introduzca 'ok' para confirmar.">🚮</button>
 			</div>
 			{{ end }}
 
