Fix posición de campos de tabla, los índices dejaban de ser consistentes y era porque se afectaban las posiciones de campos de otras tablas. Se agregó también un método para corregir las tablas afectadas.

--- a/htmltmpl/ddd/tabla.html
+++ b/htmltmpl/ddd/tabla.html
@@ -89,6 +89,8 @@
 			</h3>
 
 			<p id="campoGuardadoText"></p>
+
+			<button hx-post="/tablas/{{ .Tabla.TablaID }}/campos_ordenar" class="text-sm" title="Fix orden de campos">Ordenar</button>
 			
 		</header>
 		<div class="overflow-x-auto">
