Refactorizar generación de tablas para simplificar API pública y que todo sea accedido desde la misma instancia del codegenerator.

--- a/htmltmpl/consulta.html
+++ b/htmltmpl/consulta.html
@@ -252,7 +252,7 @@
 			
 			<option value="go/qry_struct">Go Struct</option>
 			
-			<option value="mysql-directriz">MySQL Directrices</option>
+			<option value="mysql">MySQL Directrices</option>
 			<option value="mysql/servicio">MySQL Servicio</option>
 			<option value="mysql/constantes">MySQL Constantes</option>
 			<option value="mysql/scan-row">MySQL Scan Row</option>
