--- a/htmltmpl/tabla.html
+++ b/htmltmpl/tabla.html
@@ -184,7 +184,7 @@
 				</optgroup>
 				<optgroup label="MySQL">
 					<option value="mysql/create_table">CREATE TABLE</option>
-					<option value="mysql-directriz">MySQL Directrices</option>
+					<option value="mysql">MySQL Directrices</option>
 				</optgroup>
 				<optgroup label="MySQL granular">
 					<option value="mysql/servicio">MySQL Servicio</option>
