--- a/htmltmpl/ddd/consulta.html
+++ b/htmltmpl/ddd/consulta.html
@@ -302,7 +302,7 @@
 			
 			<option value="go/item-consulta">Go Struct</option>
 			
-			<option value="mysql-directriz">MySQL Directrices</option>
+			<option value="mysql">MySQL Directrices</option>
 			<option value="mysql/servicio">MySQL Servicio</option>
 			<option value="mysql/constantes">MySQL Constantes</option>
 			<option value="mysql/scan-row">MySQL Scan Row</option>
