--- a/htmltmpl/ddd/tabla.html
+++ b/htmltmpl/ddd/tabla.html
@@ -272,7 +272,7 @@
 				
 				<optgroup label="MySQL">
 					<option value="mysql/create_table">CREATE TABLE MySQL</option>
-					<option value="mysql-directriz">MySQL Directrices</option>
+					<option value="mysql">MySQL Directrices</option>
 				</optgroup>
 				<optgroup label="MySQL granular">
 					<option value="mysql/servicio">MySQL Servicio</option>
