--- a/htmltmpl/ddd/tabla.html
+++ b/htmltmpl/ddd/tabla.html
@@ -223,13 +223,13 @@
 			</div>
 			
 			<div class="flex flex-wrap items-center justify-center gap-4">
-				<button type="button" hx-put="/tablas/{{ .Tabla.TablaID }}/generar/mysql" hx-target="#status_nombre" hx-trigger="click, keyup[ctrlKey&&key=='Enter'] from:body" class="inline-block px-6 py-2 font-medium text-slate-100 transition-colors bg-green-700 rounded shadow-md hover:bg-green-600">
+				<button type="button" hx-get="/tablas/{{ .Tabla.TablaID }}/generar?modo=archivo&tipo=mysql" hx-target="#status_nombre" hx-trigger="click, keyup[ctrlKey&&key=='Enter'] from:body" class="inline-block px-6 py-2 font-medium text-slate-100 transition-colors bg-green-700 rounded shadow-md hover:bg-green-600">
 					MySQL
 				</button>
-				<button type="button" hx-put="/tablas/{{ .Tabla.TablaID }}/generar/sqlite" hx-target="#status_nombre" class="inline-block px-6 py-2 font-medium text-slate-100 transition-colors bg-green-700 rounded shadow-md hover:bg-green-600">
+				<button type="button" hx-get="/tablas/{{ .Tabla.TablaID }}/generar?modo=archivo&tipo=sqlite" hx-target="#status_nombre" class="inline-block px-6 py-2 font-medium text-slate-100 transition-colors bg-green-700 rounded shadow-md hover:bg-green-600">
 					Sqlite
 				</button>
-				<button type="button" hx-put="/tablas/{{ .Tabla.TablaID }}/generar/entidad" hx-target="#status_nombre" class="inline-block px-6 py-2 font-medium text-slate-100 transition-colors bg-green-700 rounded shadow-md hover:bg-green-600">
+				<button type="button" hx-get="/tablas/{{ .Tabla.TablaID }}/generar?modo=archivo&tipo=entidad" hx-target="#status_nombre" class="inline-block px-6 py-2 font-medium text-slate-100 transition-colors bg-green-700 rounded shadow-md hover:bg-green-600">
 					Entidad
 				</button>
 				<button type="button" class="inline-block px-6 py-2 font-medium text-slate-100 transition-colors bg-blue-700 rounded shadow-md hover:bg-blue-600" onclick="generarCodigoDialog.showModal(); generarCodigo();">
