--- a/htmltmpl/ddd/tabla.html
+++ b/htmltmpl/ddd/tabla.html
@@ -214,6 +214,7 @@
 			<h3 class="flex-grow text-xl font-bold">
 				Generar código
 			</h3>
+			<button type="button" class="w-10 py-1 text-xl bg-cyan-900 rounded-lg hover:bg-cyan-950" onclick="helpDirectrices.showModal()" title="Ayuda"><i class="fa-solid fa-question"></i></button>
 		</header>
 		<div class="grid p-4 md:grid-cols-2">
 			
@@ -339,6 +340,26 @@
 	</dialog>
 
 </main>
+
+<dialog id="helpDirectrices" class="p-3 rounded-lg">
+	<header class="flex flex-wrap items-center gap-3 pb-2">
+		<h2 class="flex-grow w-full text-xl text-center sm:w-auto sm:text-left">Directrices disponibles</h2>
+		<button type="button" class="w-10 py-1 text-xl text-slate-200 bg-slate-600 rounded-lg" onclick="this.parentNode.parentNode.close()" title="Cerrar"><i class="fa-solid fa-xmark"></i></button>
+	</header>
+	<div class="p-4 text-white bg-cyan-800">
+		<ul class="">
+			<li>insert</li>
+			<li>update</li>
+			<li>insert_update</li>
+			<li>delete</li>
+			<li>fetch</li>
+			<li>get</li>
+			<li>list</li>
+			<li>get_by:campo1,campo2</li>
+			<li>list_by:campo1</li>
+		</ul>
+	</div>
+</dialog>
 
 <script src="/assets/js/Sortable.min.js"></script>
 
