--- a/htmltmpl/ddd/paquetes.html
+++ b/htmltmpl/ddd/paquetes.html
@@ -118,13 +118,13 @@
 		<button type="button" class="w-10 py-1 text-xl text-slate-200 bg-slate-600 rounded-lg" onclick="this.parentNode.parentNode.close()" title="Cerrar"><i class="fa-solid fa-xmark"></i></button>
 	</header>
 	<div class="flex flex-wrap items-center justify-center gap-4">
-		<a target="_blank" href="/paquetes/{{ .PaqueteID }}/generar/mysql" class="inline-block px-6 py-2 font-medium text-slate-100 transition-colors bg-cyan-700 rounded shadow-md hover:bg-cyan-600">
+		<a target="_blank" href="/paquetes/{{ .PaqueteID }}/generar?tipo=mysql" class="inline-block px-6 py-2 font-medium text-slate-100 transition-colors bg-cyan-700 rounded shadow-md hover:bg-cyan-600">
 			MySQL
 		</a>
-		<a target="_blank" href="/paquetes/{{ .PaqueteID }}/generar/sqlite" class="inline-block px-6 py-2 font-medium text-slate-100 transition-colors bg-cyan-700 rounded shadow-md hover:bg-cyan-600">
+		<a target="_blank" href="/paquetes/{{ .PaqueteID }}/generar?tipo=sqlite" class="inline-block px-6 py-2 font-medium text-slate-100 transition-colors bg-cyan-700 rounded shadow-md hover:bg-cyan-600">
 			Sqlite
 		</a>
-		<a target="_blank" href="/paquetes/{{ .PaqueteID }}/generar/entidad" class="inline-block px-6 py-2 font-medium text-slate-100 transition-colors bg-cyan-700 rounded shadow-md hover:bg-cyan-600">
+		<a target="_blank" href="/paquetes/{{ .PaqueteID }}/generar?tipo=entidad" class="inline-block px-6 py-2 font-medium text-slate-100 transition-colors bg-cyan-700 rounded shadow-md hover:bg-cyan-600">
 			Entidad
 		</a>
 	</div>
