--- a/htmltmpl/campo-especial.html
+++ b/htmltmpl/campo-especial.html
@@ -1,7 +1,7 @@
 <header class="flex flex-wrap items-center gap-3 pb-2">
 	<h2 class="flex-grow w-full text-xl text-center sm:w-auto sm:text-left">Valores posibles para <b>{{ .Nombre.Humano }}</b></h2>
 	<button type="button" class="w-10 py-1 text-2xl text-slate-200 bg-slate-400 rounded-lg hover:bg-slate-300" onclick="editValoresPosibles(this)" title="Editar">✏️</button>
-	<button type="button" class="w-10 py-1 text-2xl text-slate-200 bg-slate-400 rounded-lg hover:bg-slate-300" onclick="this.parentNode.parentNode.close()" title="Cerrar">✖️</button>
+	<button type="button" class="w-10 py-1 text-2xl text-slate-200 bg-slate-400 rounded-lg hover:bg-slate-300" onclick="this.closest('dialog').close()" title="Cerrar">✖️</button>
 </header>
 
 <div id="tblValoresPosibles" hx-get="/v1/tablas/{{ .Tabla.Nombre.Clave }}/c/{{ .Idx }}/especial" hx-target="#campoEspecialDialog" hx-swap="innerHTML" hx-trigger="campoEspecialGuardado">
