--- a/htmltmpl/d_procesos.html
+++ b/htmltmpl/d_procesos.html
@@ -45,7 +45,7 @@
 <dialog id="dlgEdit" class="p-3 rounded-lg">
 	<header class="flex flex-wrap items-center gap-3 pb-2">
 		<h2 class="flex-grow w-full text-xl text-center sm:w-auto sm:text-left">Épica</h2>
-		<button type="button" class="w-10 py-1 text-xl text-slate-200 bg-slate-600 rounded-lg" onclick="this.parentNode.parentNode.close()" title="Cerrar"><i class="fa-solid fa-xmark"></i></button>
+		<button type="button" class="w-10 py-1 text-xl text-slate-200 bg-slate-600 rounded-lg" onclick="this.closest('dialog').close()" title="Cerrar"><i class="fa-solid fa-xmark"></i></button>
 	</header>
 	{{ with .Epica }}
 	<form class="space-y-2" hx-patch="/dominios/{{ .DominioID }}/{{ .EpicaID }}">
