--- a/htmltmpl/ddd/paquetes.html
+++ b/htmltmpl/ddd/paquetes.html
@@ -83,7 +83,7 @@
 <dialog id="paquete{{ .PaqueteID }}" class="p-3 rounded-lg">
 	<header class="flex flex-wrap items-center gap-3 pb-2">
 		<h2 class="flex-grow w-full text-xl text-center sm:w-auto sm:text-left">Paquete {{ .Nombre }}</h2>
-		<button type="button" class="w-10 py-1 text-xl text-slate-200 bg-slate-600 rounded-lg" onclick="this.parentNode.parentNode.close()" title="Cerrar"><i class="fa-solid fa-xmark"></i></button>
+		<button type="button" class="w-10 py-1 text-xl text-slate-200 bg-slate-600 rounded-lg" onclick="this.closest('dialog').close()" title="Cerrar"><i class="fa-solid fa-xmark"></i></button>
 	</header>
 	<form hx-put="/paquetes/{{ .PaqueteID }}">
 		<div class="pb-2">
@@ -115,7 +115,7 @@
 <dialog id="generar{{ .PaqueteID }}" class="p-3 rounded-lg">
 	<header class="flex flex-wrap items-center gap-3 pb-2">
 		<h2 class="flex-grow w-full text-xl text-center sm:w-auto sm:text-left">Generar código para paquete {{ .Nombre }}</h2>
-		<button type="button" class="w-10 py-1 text-xl text-slate-200 bg-slate-600 rounded-lg" onclick="this.parentNode.parentNode.close()" title="Cerrar"><i class="fa-solid fa-xmark"></i></button>
+		<button type="button" class="w-10 py-1 text-xl text-slate-200 bg-slate-600 rounded-lg" onclick="this.closest('dialog').close()" title="Cerrar"><i class="fa-solid fa-xmark"></i></button>
 	</header>
 	<div class="flex flex-wrap items-center justify-center gap-4">
 		<a target="_blank" href="/paquetes/{{ .PaqueteID }}/generar?tipo=mysql" class="inline-block px-6 py-2 font-medium text-slate-100 transition-colors bg-cyan-700 rounded shadow-md hover:bg-cyan-600">
