--- a/htmltmpl/ddd/tabla.html
+++ b/htmltmpl/ddd/tabla.html
@@ -243,7 +243,7 @@
 	<dialog id="campoEditDialog" class="p-3 rounded-lg">
 		<header class="flex flex-wrap items-center gap-3 pb-2">
 			<h2 class="flex-grow w-full text-xl text-center sm:w-auto sm:text-left">Modificar campo</h2>
-			<button type="button" class="w-10 py-1 text-xl text-slate-200 bg-slate-600 rounded-lg" onclick="this.parentNode.parentNode.close()" title="Cerrar"><i class="fa-solid fa-xmark"></i></button>
+			<button type="button" class="w-10 py-1 text-xl text-slate-200 bg-slate-600 rounded-lg" onclick="this.closest('dialog').close()" title="Cerrar"><i class="fa-solid fa-xmark"></i></button>
 		</header>
 		<div id="campoEditForm">
 			...
@@ -344,7 +344,7 @@
 <dialog id="helpDirectrices" class="p-3 rounded-lg">
 	<header class="flex flex-wrap items-center gap-3 pb-2">
 		<h2 class="flex-grow w-full text-xl text-center sm:w-auto sm:text-left">Directrices disponibles</h2>
-		<button type="button" class="w-10 py-1 text-xl text-slate-200 bg-slate-600 rounded-lg" onclick="this.parentNode.parentNode.close()" title="Cerrar"><i class="fa-solid fa-xmark"></i></button>
+		<button type="button" class="w-10 py-1 text-xl text-slate-200 bg-slate-600 rounded-lg" onclick="this.closest('dialog').close()" title="Cerrar"><i class="fa-solid fa-xmark"></i></button>
 	</header>
 	<div class="p-4 text-white bg-cyan-800">
 		<ul class="">
