Agregar ayuda para custom list by

--- a/htmltmpl/ddd/tabla.html
+++ b/htmltmpl/ddd/tabla.html
@@ -357,6 +357,7 @@
 			<li>list</li>
 			<li>get_by:campo1,campo2</li>
 			<li>list_by:campo1</li>
+			<li>list_custom:BySomeValue:param1,param2:JOIN s WHERE x > 2 ORDER BY x:param1,param1,param2</li>
 		</ul>
 	</div>
 </dialog>
