--- a/htmltmpl/app/error.html
+++ b/htmltmpl/app/error.html
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>{{ if $.Titulo }}{{ $.Titulo }}{{ else }}Pargo{{ end }}</title>
 		<link rel="shortcut icon" href="/assets/img/pargo_32.png" type="image/png">
-		<link rel="stylesheet" type="text/css" href="/assets/css/estilo.css">
+		<link rel="stylesheet" type="text/css" href="/assets/css/tailwind.css">
 		<link rel="stylesheet" type="text/css" href="/assets/css/fontawesome.min.css">
 
 		<script defer src="/assets/js/htmx.min.js"></script>
