--- a/htmltmpl/ddd/paquetes.html
+++ b/htmltmpl/ddd/paquetes.html
@@ -118,24 +118,51 @@
 		<button type="button" class="w-10 py-1 text-xl text-slate-200 bg-slate-600 rounded-lg" onclick="this.closest('dialog').close()" title="Cerrar"><i class="fa-solid fa-xmark"></i></button>
 	</header>
 	<div class="flex flex-wrap items-center justify-center gap-4">
-		<a target="_blank" href="/paquetes/{{ .PaqueteID }}/generar?tipo=mysql" class="inline-block px-6 py-2 font-medium text-slate-100 transition-colors bg-cyan-700 rounded shadow-md hover:bg-cyan-600">
+		<button class="inline-block px-6 py-2 font-medium text-slate-100 transition-colors bg-cyan-700 rounded shadow-md hover:bg-cyan-600"
+			type="button"
+			hx-get="/paquetes/{{ .PaqueteID }}/generar?tipo=mysql"
+			hx-target="#gen{{ .PaqueteID }}retro"
+			>
 			MySQL repo
-		</a>
-		<a target="_blank" href="/paquetes/{{ .PaqueteID }}/generar?tipo=schema&db=mysql" class="inline-block px-6 py-2 font-medium text-slate-100 transition-colors bg-cyan-700 rounded shadow-md hover:bg-cyan-600">
+		</button>
+		<button class="inline-block px-6 py-2 font-medium text-slate-100 transition-colors bg-cyan-700 rounded shadow-md hover:bg-cyan-600"
+			type="button"
+			hx-get="/paquetes/{{ .PaqueteID }}/generar?tipo=schema&db=mysql"
+			hx-target="#gen{{ .PaqueteID }}retro"
+			>
 			MySQL schema
-		</a>
-		<a target="_blank" href="/paquetes/{{ .PaqueteID }}/generar?tipo=sqlite" class="inline-block px-6 py-2 font-medium text-slate-100 transition-colors bg-cyan-700 rounded shadow-md hover:bg-cyan-600">
+		</button>
+		<button class="inline-block px-6 py-2 font-medium text-slate-100 transition-colors bg-cyan-700 rounded shadow-md hover:bg-cyan-600"
+			type="button"
+			hx-get="/paquetes/{{ .PaqueteID }}/generar?tipo=sqlite"
+			hx-target="#gen{{ .PaqueteID }}retro"
+			>
 			Sqlite repo
-		</a>
-		<a target="_blank" href="/paquetes/{{ .PaqueteID }}/generar?tipo=schema&db=sqlite" class="inline-block px-6 py-2 font-medium text-slate-100 transition-colors bg-cyan-700 rounded shadow-md hover:bg-cyan-600">
+		</button>
+		<button class="inline-block px-6 py-2 font-medium text-slate-100 transition-colors bg-cyan-700 rounded shadow-md hover:bg-cyan-600"
+			type="button"	
+			hx-get="/paquetes/{{ .PaqueteID }}/generar?tipo=schema&db=sqlite"
+			hx-target="#gen{{ .PaqueteID }}retro"
+			hx-prompt="Versión del nuevo esquema (2, 3...):"
+			>
 			Sqlite schema
-		</a>
-		<a target="_blank" href="/paquetes/{{ .PaqueteID }}/generar?tipo=migracion&db=sqlite" class="inline-block px-6 py-2 font-medium text-slate-100 transition-colors bg-cyan-700 rounded shadow-md hover:bg-cyan-600">
+		</button>
+		<button class="inline-block px-6 py-2 font-medium text-slate-100 transition-colors bg-cyan-700 rounded shadow-md hover:bg-cyan-600"
+			type="button"	
+			hx-get="/paquetes/{{ .PaqueteID }}/generar?tipo=migrar_datos&db=sqlite"
+			hx-target="#gen{{ .PaqueteID }}retro"
+			hx-prompt="Versión del nuevo esquema (2, 3...):"
+			>
 			Migración full
-		</a>
-		<a target="_blank" href="/paquetes/{{ .PaqueteID }}/generar?tipo=entidad" class="inline-block px-6 py-2 font-medium text-slate-100 transition-colors bg-cyan-700 rounded shadow-md hover:bg-cyan-600">
+		</button>
+		<button class="inline-block px-6 py-2 font-medium text-slate-100 transition-colors bg-cyan-700 rounded shadow-md hover:bg-cyan-600"
+			type="button"
+			hx-get="/paquetes/{{ .PaqueteID }}/generar?tipo=entidad"
+			hx-target="#gen{{ .PaqueteID }}retro"
+			>
 			Entidad
-		</a>
+		</button>
 	</div>
+	<p id="gen{{ .PaqueteID }}retro" class="p-4"></p>
 </dialog>
 {{ end }}{{ end }}
